install/tensquare_zuul/install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tensquare-zuul
  namespace: NAMESPACE
  labels:
    app: tensquare-zuul
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tensquare-zuul
  template:
    metadata:
      labels:
        app: tensquare-zuul
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - tensquare-zuul
                topologyKey: "kubernetes.io/hostname"
      imagePullSecrets:
        - name: harbor-auth
      containers:
        - name: tensquare-zuul
          image: HARBOR/PROJECT/IMAGE:TAG
          imagePullPolicy: IfNotPresent
          ports:
            - name: zuul
              containerPort: 10020
              protocol: TCP
          volumeMounts:
            - name: timezone
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: timezone
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
---
# 暴露给前端项目访问
apiVersion: v1
kind: Service
metadata:
  name: tensquare-zuul-headless
  namespace: NAMESPACE
  labels:
    app: tensquare-zuul-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: tensquare-zuul
  ports:
    - name: zuul
      port: 10020
      targetPort: zuul
